@startuml Diagrama de Classes Resumido Sort it Out
class ScoreSystemProvider {
    -saveDataProvider: SaveDataProvider
    +correctMove(): void
    +wrongMove(): void
    +resetScore(): void
    +hintAsked(): void
    -addPoints(): void
    -subtractPoints(): void
    -updateScoreOnSaveFile(): void
}
ScoreSystemProvider -- SaveDataProvider
class SaveData {
    +score: int 
    +bubbleSortSaveData: BubbleSortSaveData
    +mergeSortSaveData: MergeSortSaveData
    +fromJson(json: Map<String, dynamic>): SaveData
    +toJson(): Map<String, dynamic>
}
SaveData "1" *-- "1" BubbleSortSaveData
class SaveDataProvider {
    +saveData: SaveData
    +init(): Future<SaveDataProvider>
    +getSavedScore(): int
    +saveStageCompletion(): dynamic
    +saveScore(): dynamic
    +getBubbleSortSaveData(): BubbleSortSaveData
    +getMergeSortSaveData(): MergeSortSaveData
    -init(): dynamic
    -create(): dynamic
    -writeSaveFile(): void
    -getFilePath(): Future<String>
    -readFile(): void
    -createFile(): void
    -previousSaveFileExists(): dynamic
}
SaveDataProvider *-- SaveData : contains
SaveDataProvider -- BubbleSort
class BubbleSortSaveData {
    +isStage1Complete: bool
    +isStage2Complete: bool
    +isStage3Complete: bool
    +fromJSON(json: Map<String, dynamic>): BubbleSortSaveData
    +toJSON(): Map<String, dynamic>
}
class SortableItem {
    +title: String
    +color: Color
    +height: double
    +width: double
    +fontSize: double
}
class BubbleSort{
    +build(): Widget
    -onReorder(oldIndex: int, newIndex: int, BubbleSortProvider, SaveDataProvider): void
    -onStageSolved(BubbleSortProvider, SaveDataProvider): dynamic
    -hintAsked(ScoreSystemProvider, BubbleSortMessageProvider): dynamic
    -correctMove(BubbleSortProvider, ScoreSystemProvider, BubbleSortMessageProvider): dynamic
    -wrongMove(notHighlightedElementMoved: bool, BubbleSortProvider,
     ScoreSystemProvider, BubbleSortMessageProvider): dynamic
}
BubbleSort -- BubbleSortProvider
BubbleSort -- BubbleSortMessageProvider
BubbleSort "1" o-- "many" SortableItem
BubbleSort -- ScoreSystemProvider 
class BubbleSortProvider {
    +draggableList: List<SortableItem>
    -index1: int
    -index2: int
    +isStageSolved: bool
    -generateListOfElements(listSize: int): List<int>
    +correctMove(): void
    -unselect(index1: int, index2: int): void
    -incrementIndexes(): void
    +select(index1: int, index2: int): void
    +wrongMove(): void
    +checkCorrectMoveConditions(): bool
    +isPos0to1Move(oldIndex: int, newIndex: int): bool
    +isPos1to0Move(oldIndex: int, newIndex: int): bool
    -isSelectionOrdered(): bool
    -isListFullyOrdered(): bool
    -isSelectionOutOfBounds(index: int): bool
    +resetIndexes(): void
    +reset(): void
}
BubbleSortProvider "1" o-- "many" SortableItem
class BubbleSortMessageProvider {
    +wrongMoveMessage(notHighlightedElementMoved: bool): void
    +correctMoveMessage(): void
    +hintAsked(): void
    -getRandomHint(): String
}
@enduml
